changed the paths to be more consistent
